fixed banner being too long

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img {
   color: antiquewhite;
   position: absolute;
   height: 10vh;
-  width: 38.1vw;
+  width: 36.3vw;
   top: 20%;
   left: 0;
   opacity: 0.5;
